# nxdk-audio

./: .clang-format  CMakeLists.txt  README.md  audio.c  audio.h  audio_ac97_reg.h  audio_apu_regs.h  audio_buffer.c  audio_core.c  audio_hrtf.h  audio_internal.h  audio_voice.c  log_boot_and_xdk.txt  main.c  passthrough.a56
.github/workflows/: build.yml
cmake/: Postbuild.cmake
example/: midi_player.c  spatial_test.c  stream_test.c
example/cmake/: Postbuild.cmake
include/: nxaudio.h
